--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/OkuraCB/whatsapp-group-listener#readme",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "flat": "^6.0.1",
     "prisma": "^5.21.1",
     "qrcode-terminal": "^0.12.0",
     "tsx": "^4.19.1",
