--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/OkuraCB/whatsapp-group-listener#readme",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^6.0.0",
     "flat": "^6.0.1",
-    "prisma": "^5.21.1",
+    "prisma": "^6.0.0",
     "qrcode-terminal": "^0.12.0",
-    "tsx": "^4.19.1",
-    "whatsapp-web.js": "^1.26.0"
+    "tsx": "^4.19.2",
+    "whatsapp-web.js": "^1.23.0"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^17.1.11"
   }
 }
