--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prisma": "^6.0.0",
     "qrcode-terminal": "^0.12.0",
     "tsx": "^4.19.2",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.26.1-alpha.3"
   },
   "devDependencies": {
     "npm-check-updates": "^17.1.11"
