--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   },
   "homepage": "https://github.com/OkuraCB/whatsapp-group-listener#readme",
   "dependencies": {
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "^6.16.0",
     "flat": "^6.0.1",
-    "prisma": "^6.0.0",
+    "prisma": "^6.16.0",
     "qrcode-terminal": "^0.12.0",
-    "tsx": "^4.19.2",
-    "whatsapp-web.js": "^1.26.1-alpha.3"
+    "tsx": "^4.20.5",
+    "whatsapp-web.js": "^1.34.1"
   },
   "devDependencies": {
-    "npm-check-updates": "^17.1.11"
+    "npm-check-updates": "^18.1.0"
   }
 }
