--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "@prisma/client": "^6.16.0",
     "flat": "^6.0.1",
     "prisma": "^6.16.0",
-    "qrcode-terminal": "^0.12.0",
     "tsx": "^4.20.5",
-    "whatsapp-web.js": "^1.34.1"
+    "whatsapp-web.js": "1.34.1"
   },
   "devDependencies": {
-    "npm-check-updates": "^18.1.0"
+    "@types/qrcode-terminal": "^0.12.2",
+    "npm-check-updates": "^18.1.0",
+    "qrcode-terminal": "^0.12.0"
   }
 }
